--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -3,7 +3,7 @@
 {% if author.avatar contains 'http' %}
 	<img src="{{ author.avatar }}" class="bio-photo" alt="{{ author.name }} bio photo">
 {% else %}
-	<img src="{{ site.url }}/images/{{ author.avatar }}" class="bio-photo" alt="{{ author.name }} bio photo">
+	<img src="/images/{{ author.avatar }}" class="bio-photo" alt="{{ author.name }} bio photo">
 {% endif %}
 
   <h3 itemprop="name">{{ site.owner.name }}</h3>
