changed out the svgs
they’ve got a smaller base, I think

--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -12,4 +12,5 @@
 	<a href="http://{{ author.tumblr }}.tumblr.com"  class="soc soc-tumblr" title="Tumblr">{% include _svg-tumblr.html %}</a>
 	<a href="http://github.com/{{ author.github }}"  class="soc soc-github" title="GitHub">{% include _svg-github.html %}</a>
 	<a href="mailto:{{ author.email }}" class="soc soc-email" title="Email">{% include _svg-envelope.html %}</a>
+	<a href="/feed.xml" class="soc soc-feed" title="Feed">{% include _svg-feed.html %}</a>
 </div>
