--- a/_includes/_author-bio.html
+++ b/_includes/_author-bio.html
@@ -7,10 +7,12 @@
 {% endif %}
 
   <h3 itemprop="name">{{ site.owner.name }}</h3>
-  <p>{{ site.owner.bio | markdownify | remove:'<p>' | remove:'</p>' }}</p>
-	<a href="http://twitter.com/{{ author.twitter }}" class="soc soc-twitter" title="Twitter">{% include _svg-twitter.html %}</a>
-	<a href="http://{{ author.tumblr }}.tumblr.com"  class="soc soc-tumblr" title="Tumblr">{% include _svg-tumblr.html %}</a>
-	<a href="http://github.com/{{ author.github }}"  class="soc soc-github" title="GitHub">{% include _svg-github.html %}</a>
-	<a href="mailto:{{ author.email }}" class="soc soc-email" title="Email">{% include _svg-envelope.html %}</a>
-	<a href="/feed.xml" class="soc soc-feed" title="Feed">{% include _svg-feed.html %}</a>
+  <p class="slogan">{{ site.owner.bio | markdownify | remove:'<p>' | remove:'</p>' }}</p>
+	<p class="connect">connect <br>
+		<a href="http://twitter.com/{{ author.twitter }}" class="soc soc-twitter" title="Twitter">{% include _svg-twitter.html %}</a>
+		<a href="http://{{ author.tumblr }}.tumblr.com"  class="soc soc-tumblr" title="Tumblr">{% include _svg-tumblr.html %}</a>
+		<a href="http://github.com/{{ author.github }}"  class="soc soc-github" title="GitHub">{% include _svg-github.html %}</a>
+		<a href="mailto:{{ author.email }}" class="soc soc-email" title="Email">{% include _svg-envelope.html %}</a>
+		<a href="/feed.xml" class="soc soc-feed" title="Feed">{% include _svg-feed.html %}</a>
+	</p>
 </div>
